syntax = "proto3";

package booking;

import "booking.proto";
import "stage.proto";
import "address.proto";
import "google/protobuf/empty.proto";

option go_package = "./;proto";

service StageService {
  rpc GetListStages (GetListStagesRequest) returns (GetListStagesResponse) {}
  rpc CreateStage (CreateStageRequest) returns (CreateStageResponse){}
  rpc UpdateStage (UpdateStageRequest) returns (UpdateStageResponse) {}
  rpc RemoveStage (RemoveStageRequest) returns (RemoveStageResponse) {}
  rpc CreateIssue(CreateIssueRequest) returns (IssueIDMessage) {}
  rpc UpdateIssue(UpdateIssueRequest) returns (Issue) {}
  rpc RemoveIssue(IssueIDMessage) returns (google.protobuf.Empty) {}
}

message GetListStagesRequest {
  Booking booking = 1;
}

message GetListStagesResponse {
  repeated Stage stages = 1;
}

message CreateStageRequest {
  string booking_id = 1;
}

message CreateStageResponse {
  string stage_id = 1;
}

message UpdateStageRequest {
  Stage stage = 1;
}

message UpdateStageResponse {
  Stage stage = 1;
}

message RemoveStageRequest {
  Stage stage = 1;
}

message RemoveStageResponse {
  string stage_id = 1;
}

message IssueIDMessage {
  string issue_id = 1;
}

message CreateIssueRequest {
  string stage_id = 1;
}

message UpdateIssueRequest {
  string id = 1;
  string title = 2;
  string description = 3;
  Timeline timeline = 4;
  repeated uint32 participant_portal_codes = 5;
  repeated string attachment_id = 6;
}
